build/00015/H4P_PresenceDotLocal_esp32s3.log
Processing esp32s3 (board: esp32-s3-devkitc-1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Tool Manager: Installing https://github.com/pioarduino/registry/releases/download/0.0.1/esptoolpy-v5.1.0.zip
Unpacking 0% 10% 20%
Tool Manager: tool-esptoolpy@5.1.0 has been installed!
Tool Manager: Installing file:///home/runner/.platformio/tools/tool-esptoolpy
Tool Manager: tool-esptoolpy@5.1.0 has been installed!
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (55.3.35) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting H4P_PresenceDotLocal.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.306b05f
Building in release mode
Compiling .pio/build/esp32s3/src/H4P_PresenceDotLocal.ino.cpp.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-psram.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-rgb-led.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-rmt.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-sigmadelta.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-spi.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-time.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-timer.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-tinyusb.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-touch-ng.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-touch.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/esp32-hal-uart.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/firmware_msc_fat.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/freertos_stats.cpp.o
Compiling .pio/build/esp32s3/FrameworkArduino/libb64/cdecode.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/libb64/cencode.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/main.cpp.o
Compiling .pio/build/esp32s3/FrameworkArduino/stdlib_noniso.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/wiring_pulse.c.o
Compiling .pio/build/esp32s3/FrameworkArduino/wiring_shift.c.o
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_PresenceDotLocal.ino:40:2: error: #error The sketch is not supported outside ESP8266 currently
   40 | #error The sketch is not supported outside ESP8266 currently
      |  ^~~~~
*** [.pio/build/esp32s3/src/H4P_PresenceDotLocal.ino.cpp.o] Error 1
========================= [FAILED] Took 11.22 seconds =========================
Environment    Status    Duration
-------------  --------  ------------
esp32s3        FAILED    00:00:11.219
==================== 1 failed, 0 succeeded in 00:00:11.219 ====================